# yini-test-suite

./: CHANGELOG.md  LICENSE  README.md  Taskfile.yml  pyproject.toml
docs/: Development-Setup.md  Maintainer-Doc.md  case-contract.md  runner-flow.md
src/yini_test/: adapters.py  cli.py  discovery.py  expectations.py  runner.py
src/yini_test/cases/: manifest.json
src/yini_test/cases/golden/lenient/invalid/comments/: block-comment-nested.yini  block-comment-unterminated.yini  comment-splits-token.yini  semicolon-inline-after-value.yini
src/yini_test/cases/golden/lenient/invalid/inline-objects/: inline-object-opening-on-next-line.yini
src/yini_test/cases/golden/lenient/invalid/keys/: key-starts-with-digit.yini  key-using-colon.yini  key-with-dot.yini  key-with-hyphen.yini
src/yini_test/cases/golden/lenient/invalid/lists/: list-opening-on-next-line.yini  list-with-missing-value.yini
src/yini_test/cases/golden/lenient/invalid/numbers/: hex-with-hash-prefix.yini  malformed-exponent-no-digits.yini  malformed-float-double-dot.yini  malformed-float-trailing-dot.yini  malformed-underscore-double.yini  malformed-underscore-leading.yini  malformed-underscore-trailing.yini
src/yini_test/cases/golden/lenient/invalid/parser-mode/: yini-marker-after-content.yini  yini-marker-after-section.yini
src/yini_test/cases/golden/lenient/invalid/strings/: classic-string-invalid-octal.yini  classic-string-invalid-unicode.yini  multiline-non-triple-quoted.yini  string-not-closed-triple-quote.yini  string-with-raw-control-char.yini  unquoted-string-value.yini
src/yini_test/cases/golden/lenient/valid/booleans-and-null/: blank-value-as-null.yini  boolean-true-uppercase.yini  null-explicit-keyword.yini  null-uppercase.json  null-uppercase.yini
src/yini_test/cases/golden/lenient/valid/comments/: block-comment-between-members.json  block-comment-between-members.yini  block-comment-inline-within-value.json  block-comment-inline-within-value.yini  comment-after-end-marker.json  comment-after-end-marker.yini  disable-line-basic.json  disable-line-basic.yini  disable-line-mixed.json  disable-line-mixed.yini  disable-line-section.json  disable-line-section.yini  shebang-as-comment.json  shebang-as-comment.yini
src/yini_test/cases/golden/lenient/valid/concatenation/: string-conversion-number.json  (+9 more)
src/yini_test/utils/: executables.py
tests/: test_cli.py  test_runner.py
(+181 files in other folders)
