[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yini-test-suite"
version = "0.3.0b1"
description = "Shared test harness and case corpus for YINI parser implementations."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["yini", "testing", "parser", "conformance", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Intended Audience :: Developers",
]

[project.scripts]
yini-test-suite = "yini_test.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
yini_test = [
  "cases/*.json",
  "cases/**/*.yini",
  "cases/**/*.json",
  "cases/**/*.md",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
