[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yini-test-suite"
version = "0.3.0b2"
description = "Shared test harness and case corpus for YINI parser implementations."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Marko K. Seppänen" },
]
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["yini", "testing", "parser", "conformance", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/YINI-lang/yini-test-suite"
Repository = "https://github.com/YINI-lang/yini-test-suite"
Issues = "https://github.com/YINI-lang/yini-test-suite/issues"
Changelog = "https://github.com/YINI-lang/yini-test-suite/blob/main/CHANGELOG.md"

[project.scripts]
yini-test-suite = "yini_test.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
yini_test = [
  "cases/*.json",
  "cases/**/*.yini",
  "cases/**/*.json",
  "cases/**/*.md",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
